# rattlers

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  PR_PRETEST_BUILD.md  PR_SUMMARY.md  README.md  calendar.js  package-lock.json  package.json
.claude/: rules.md
.husky/: commit-msg  pre-commit
backend/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend-ts/: README.md  esbuild.config.mjs  eslint.config.js  package-lock.json  (+3 more)
backend/functions/auth/: post_authentication.py
backend/functions/feedback/: get_favorites.py  get_feedback_status.py  report_inactive.py  submit_feedback.py  toggle_favorite.py
backend/functions/locations/: check_duplicate.py  check_pending_photo.py  create_location.py  delete_location.py  get_location_by_id.py  get_locations.py  suggest_addresses.py  update_location.py
backend/functions/photos/: __init__.py  analyze_photo.py  get_upload_url.py
backend/functions/routes/: create_route.py  delete_route.py  generate_pdf.py  get_route_by_id.py  get_route_feedback_status.py  get_routes.py  get_routes_leaderboard.py  get_user_routes.py  get_user_saved_routes.py  route_feedback.py  update_route.py
backend/functions/suggestions/: approve_suggestion.py  get_suggestions.py  reject_suggestion.py  submit_suggestion.py  update_suggestion.py
backend/functions/users/: get_leaderboard.py  get_locations_leaderboard.py  get_profile.py  get_submissions.py  update_profile.py
backend/layers/common/: pyproject.toml
backend/layers/common/python/: auth.py  db.py  models.py  responses.py  username_generator.py
(+183 files in other folders)
