[project]
name = "christmas-lights-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.2",
    "geopy>=2.4.1",
    "weasyprint>=62.0",
    "qrcode[pil]>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "moto>=4.2.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "boto3-stubs[essential]>=1.34.0",
    "python-dotenv>=1.0.0",
]
